[package]
name = "rustquty-core"
version = "0.1.0"
edition = "2024"
description = "Core library for rustquty, a local-first quality scanner for Rust projects"
license = "MIT"
repository = "https://github.com/rustquty/rustquty"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
toml = "0.8"
tempfile = "3"
rayon = "1"