[package]
name = "rustquty-core"
version = "0.4.2"
edition = "2024"
description = "Core library for rustquty, a local-first quality scanner for Rust projects"
license = "MIT"
repository = "https://github.com/enrell/rustquty"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
toml = "0.8"
tempfile = "3"
rayon = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"